--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <meta name="robots" content="ALL">
   <meta name="keywords" content="英会話　神戸, 英会話　三宮, 英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
   <meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
+  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
+  />
 
   <meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
   <meta property="og:type" content="school">
@@ -36,8 +37,10 @@
   <title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
   <!--     Fonts and icons     -->
-  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
+  />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
+  />
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -89,7 +92,8 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
+          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
+            width="auto">
         </a>
       </div>
 
@@ -501,8 +505,7 @@
               </ul> -->
 
               <p class="text-dark-gray">
-                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>
-                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
+                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
               </p>
               <a href="pricing.html" class="btn btn-primary margin-top-small">
                 レッスン・料金プランを詳しく見る
@@ -739,8 +742,7 @@
                     <li>ご予算に合わせてしかも低料金で無理なく計画的に英会話レッスンを受けられます。遠慮なくご相談ください。</li>
                     <li>無理な入会はさせません。学びたいという気持ちが一番大事です。説明を聞きに来られても無料体験レッスンを受けられても執拗な勧誘は一切致しません。</li>
                     <li>授業はネイティブ、授業以外英会話の質問に至るまですべては日本人スタッフが日本語で対応致します。</li>
-                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。
-                      いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
+                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。 いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
                     </li>
                   </ol>
                 </h5>
@@ -1154,7 +1156,8 @@
           </div>
         </div>
 
-        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank" class="btn btn-danger btn-raised" style="width: 200px">
+        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
+          class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play">　</i>Matt先生　</a>
         <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">About</a>
 
@@ -1208,6 +1211,62 @@
       </div> -->
 
 
+    <hr>
+
+    <!-- ACCESS -->
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <h4 class="text-center">神戸・三宮の英会話サンミハールランゲージサービスの</h4>
+          <h2 class="title text-center">地図・アクセス</h2>
+          <div class="col-md-5 col-md-offset-1">
+            <a href="https://goo.gl/maps/TtXhxjL5HBE2" target="_blank">
+              <img src="assets/img/about-map.jpg" alt="Access Map" style="width: 100%;">
+            </a>
+            <h5 class="text-center">地図はGoogle Mapで開きます</h5>
+          </div>
+          <div class="col-md-5">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="info info-horizontal u-remove-padding">
+                  <div class="icon icon-info icon-small">
+                    <i class="material-icons">phone</i>
+                  </div>
+                  <div class="description">
+                    <h5 class="info-title">お電話でのお問い合わせ</h5>
+                    <p class="map-contact-info">
+                      TEL：078-331-3035
+                      <br> 平日/AM11:30～PM8:30
+                      <br> 土曜/AM10:00～PM7:00
+                      <br> (受付は12:30～、平日はPM8:00まで、土曜はPM6:00まで。日祝休）
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12">
+                <div class="info info-horizontal u-remove-padding">
+                  <div class="icon icon-info icon-small">
+                    <i class="material-icons">pin_drop</i>
+                  </div>
+                  <div class="description">
+                    <h5 class="info-title">Find us at the office</h5>
+                    <p class="map-contact-info">
+                      サンミハールランゲージサービス
+                      <br> 〒650-0021
+                      <br> 神戸市中央区三宮町1-4-13YSビル4F
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- END ACCESS -->
+
+
 
 
 
@@ -1226,7 +1285,7 @@
         </div>
         <div class="col-md-5 contact-div">
           <div class="card card-contact">
-            <form role="form" id="contact-form" method="post" action="form.php">
+            <form role="form" id="contact-form" method="post" action="contact.php">
               <div class="header header-raised header-blue text-center">
                 <h4 class="card-title">メールでのお問い合わせはこちら</h4>
               </div>
@@ -1267,20 +1326,38 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group label-floating">
-                      <label class="control-label">お名前</label>
+                      <label class="control-label">お名前（必須)</label>
                       <input type="text" name="name" class="form-control" required>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-group label-floating">
-                      <label class="control-label">電話番号</label>
+                      <label class="control-label">電話番号（必須）</label>
                       <input type="text" name="phone" class="form-control" required>
                     </div>
                   </div>
                 </div>
-                <div class="form-group label-floating">
-                  <label class="control-label">メールアドレス</label>
-                  <input type="email" name="email" class="form-control" required>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group label-floating">
+                      <label class="control-label">メールアドレス（必須）</label>
+                      <input name="email" type="email" class="form-control" required>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group label-floating">
+                      <label class="control-label">メールアドレス（確認用）</label>
+                      <input name="email-confirm" type="email" class="form-control" required>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-group label-floating">
+                      <label class="control-label">折り返しのお電話ご希望の時間帯</label>
+                      <input name="time" type="text" class="form-control">
+                    </div>
+                  </div>
                 </div>
                 <div class="form-group label-floating">
                   <label class="control-label">お問い合わせ内容</label>
@@ -1415,7 +1492,7 @@
       <!--     *********    END CONTACT US 2      *********      -->
 
     </div>
-
+    <!-- end section-contact-us -->
 
 
 
@@ -1430,7 +1507,7 @@
       <div id="features" class="section stations-section u-margin-top-huge">
 
         <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-        <h2 class="title text-center">アクセス</h2>
+        <h2 class="title text-center">電車・アクセス</h2>
         <h5 class="info-heading text-center">英会話サンミハール・神戸三宮教室への道順　三宮・元町どの駅からも3分から5分</h3>
           <br>
 
