--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/style.css">
-  <!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
-  <!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+  <link rel="stylesheet" href="assets/css/main1.css">
+  <link rel="stylesheet" href="assets/css/main2.css">
 
   <!-- Google reCaptcha -->
   <!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
@@ -255,7 +255,7 @@
 
 
   <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg8.jpg');">
-    <div class="container">
+    <div class="container u-mobile-header-padding">
       <div class="row">
         <div class="col-md-8">
           <h1 class="title">目標を達成できる<br>英会話スクール</h1>
@@ -281,7 +281,7 @@
     </div>
   </div>
 
-  <div class="main main-raised">
+  <div class="main main-raised" style="clear: both;">
 
     <!--     *********    FEATURES     *********      -->
 
