--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-  <link rel="stylesheet" href="assets/css/main1.css">
-  <link rel="stylesheet" href="assets/css/main2.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- <link rel="stylesheet" href="assets/css/main1.css"> -->
+  <!-- <link rel="stylesheet" href="assets/css/main2.css"> -->
 
   <!-- Google reCaptcha -->
   <!-- <script src='https://www.google.com/recaptcha/api.js'></script> -->
